# ChangeLog for sys-fs/s3ql
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/s3ql/ChangeLog,v 1.31 2014/03/30 22:06:48 radhermit Exp $

*s3ql-2.8.1 (30 Mar 2014)

  30 Mar 2014; Tim Harder <radhermit@gentoo.org> +s3ql-2.8.1.ebuild:
  Version bump.

*s3ql-2.8 (19 Mar 2014)

  19 Mar 2014; Tim Harder <radhermit@gentoo.org> +s3ql-2.8.ebuild:
  Version bump.

*s3ql-2.7 (17 Dec 2013)

  17 Dec 2013; Tim Harder <radhermit@gentoo.org> +s3ql-2.7.ebuild:
  Version bump.

*s3ql-2.6 (05 Dec 2013)

  05 Dec 2013; Tim Harder <radhermit@gentoo.org> +s3ql-2.6.ebuild:
  Version bump.

*s3ql-1.17 (28 Oct 2013)

  28 Oct 2013; Tim Harder <radhermit@gentoo.org> +s3ql-1.17.ebuild:
  Version bump.

*s3ql-2.5 (21 Oct 2013)

  21 Oct 2013; Tim Harder <radhermit@gentoo.org> +s3ql-2.5.ebuild:
  Version bump.

*s3ql-2.4 (29 Aug 2013)

  29 Aug 2013; Tim Harder <radhermit@gentoo.org> +s3ql-2.4.ebuild:
  Version bump.

  21 Jul 2013; Tim Harder <radhermit@gentoo.org> -s3ql-1.12-r1.ebuild,
  -s3ql-1.13.1.ebuild, -s3ql-1.13.2.ebuild, -s3ql-1.14.ebuild,
  -s3ql-2.1.ebuild:
  Remove old.

*s3ql-1.16 (21 Jul 2013)

  21 Jul 2013; Tim Harder <radhermit@gentoo.org> s3ql-1.15.ebuild,
  +s3ql-1.16.ebuild:
  Version bump, use system setuptools.

*s3ql-2.3 (20 Jul 2013)

  20 Jul 2013; Tim Harder <radhermit@gentoo.org> +s3ql-2.3.ebuild:
  Version bump.

*s3ql-2.2 (14 Jul 2013)

  14 Jul 2013; Tim Harder <radhermit@gentoo.org> +s3ql-2.2.ebuild:
  Version bump.

*s3ql-2.1 (15 Jun 2013)

  15 Jun 2013; Tim Harder <radhermit@gentoo.org> +s3ql-2.1.ebuild:
  Version bump.

*s3ql-1.15 (29 May 2013)

  29 May 2013; Tim Harder <radhermit@gentoo.org> +s3ql-1.15.ebuild:
  Version bump.

*s3ql-1.14 (11 Apr 2013)

  11 Apr 2013; Tim Harder <radhermit@gentoo.org> +s3ql-1.14.ebuild:
  Version bump.

*s3ql-1.13.2 (11 Mar 2013)

  11 Mar 2013; Tim Harder <radhermit@gentoo.org> +s3ql-1.13.2.ebuild:
  Version bump.
