@@ -4,6 +4,7 @@ Hash: SHA256
 DIST s3ql-1.15.tar.bz2 944374 SHA256 3521aef6613fc523f5ec4762124361297ff5cdf15dbe1f1f1a658c9df473beb6 SHA512 152ada472d866ca8c37195511497f7256de1e8767400a8166d51d6beeb1a6e6948870d170e044324d7320c45076a314f8cce676fa41a205eb0c9da8a0093e4d0 WHIRLPOOL 00173c2f32d2e5df8fcddbb7d17fb08aadbea7511717f5a12e475ad140de8060a587cb1cce0efbef808ef7f676cd6ce66f3feedc5d0bbaf796a0b650ffa5bf5e
 DIST s3ql-1.16.tar.bz2 950071 SHA256 06cf4604384926ab7bd8581a2d9c31f3a60032888336991aca9efe8c679a5e38 SHA512 dbef33863e479e90b3db8b851a8cce6d19eb6479df297791c0585b05f87f9052d62696769edb5d9a4ea845e9c34d89f140a741fdcc5c7b0caff2412c30b3bc6f WHIRLPOOL ffcb12f1f9600ca98bd7db7e4eb5d6cea76c6aef351049f4e1b17ad3dcba3fa94b5134ab92f295fbea940ed1d58f2c9ce1ead93f1208362fb074698bcafe9802
 DIST s3ql-1.17.tar.bz2 935840 SHA256 f9a330f946456e7f58ddcc9f6cd51ce3dff759c700604d23aa1c86173e68fa55 SHA512 2b1541650e0e2ac56ef5993c24c7be7d65125ef25227a90fb4c79e5e5f384891d85b5627fe659d4641473d7d9cf24fa8b10f057290490c05bbf3f85ab6e2b37f WHIRLPOOL 45fef4bb25c1ccb38f7dcaf49f71c85dcba4f2146704b3bd0076868edf4b5f1fbd8e4d60823eb85708e992c5f7549e2a92fbf57ee7bcbb0f82f67bb7f772f154
+DIST s3ql-1.18.1.tar.bz2 638265 SHA256 e89cb8d243013142e1f4d8571036b0ba46dfb1a5a495ac5a1100f9753e1b77a5 SHA512 7c3d54889ee26b9e0acfbaeb8163c949496a19997724acf8b0e638db1056d8742b6ee1efe05f5668bf111523c56dbcc7eca4cc0b923d739eb10017ac51044a55 WHIRLPOOL 2e67d60d7cd6719b256ea505dd8158820053d8122403de8821db0a3fb9b6724ae4d91e869280be6acb8ad3f1be5ebc5935ed7f0915a5fb15d76cb545944c0e72
 DIST s3ql-2.2.tar.bz2 924093 SHA256 8ed9898217d8dc3b2c2e1636c6804fa179bbb18159a3d635199dc7205f9005c3 SHA512 f5091a70b31baec428ea3786051a598a38be83b8ef546cbd730c8d8e6b9c279e8a56ba443b37b74997ecc15b3f51138b7b79dea379f875847683e247a613031d WHIRLPOOL 5d511ec0d3d1d0eaaa44be32468424650b1bb1e6dfc3593f52e85f31f3d6e58fdd146ae0640dd808b1d296e5ccbc9454a072b3543fc32c6cf126c6a9f3c32399
 DIST s3ql-2.3.tar.bz2 929937 SHA256 7ca29ac40ea9b389dd432b5b7a2246d75e1411371a64fd16e264c66a2379cef8 SHA512 f0baa947ab6b8f3109b87e8a64032f72fcd1aeca81200e16c3b76cbfcb03e82704c8f645584a3e3372a912ec4961b17911df7ca7028b7fb43f0bdff5fa4bc2a6 WHIRLPOOL 730e776cf9ad5fb10f693092cba193c3e1508e81eb785f823578d27984cedf4759a19a5477cc0510e8a850cd4ea206a714b005d1e94a5f6800e5b6b22e8398a7
 DIST s3ql-2.4.tar.bz2 934438 SHA256 5c9438c77a25d3360c3d12542cd762b5688ca469d4902d25b92abcf333cc0f4c SHA512 56861877a1f45e1ca589f31838c9991fbf703690882592ad9046c2b42079695a8046050c85afdec6ca36dd5caf6d7c44aae8a3f9383ec8321cf9483854f2f518 WHIRLPOOL 01d36ad540cb49716c3acaf8f0f39d48c7796be0821719702efbd6b92aa511bfe31c02eeb819fad1ae6d43cedc953713c9c487e7223fbffe11dc941cb2ad1152
@@ -15,6 +16,7 @@ DIST s3ql-2.8.tar.bz2 1018215 SHA256 66261b592a1acba1bd1dd25fb4d76012b6f1785f3f2
 EBUILD s3ql-1.15.ebuild 1493 SHA256 059da004dfd25e9145660530c17e933625c47299ec43cab94f1c2b3c46e279e8 SHA512 85c8a25359fbe8316b03a9ecd0279ee94a2dd7de2025dee2e8bcbdf50807fc494088dcd1813c28f89c7717c0cb2efe44fe42c0df8ebd7c6c4a7bc28de7a5e5dd WHIRLPOOL 3b6385eaa73b364a6d8319284ab39cfcdddaa70c08753c4392ce7f88eab3af990eb144e9dbdcbfcd950fb086b999f191c76155e8b577ea2070e0138602cf6051
 EBUILD s3ql-1.16.ebuild 1493 SHA256 f9245322d8a63520de9cb1e053f3008e4b98a73396138f0013c4ee71aec616a9 SHA512 ab13b422d757d3c42fef8215ddf0c248c1d545277de8c125282fca9c8700c65c1fd2983b0b4ac6e207278b30fade03fa8288cdcfc87f1438f7ec39012c62c964 WHIRLPOOL b653e9361fb6e0291bb04fd5addc27478c288edf24f3599a2aeda0ae69ddf1c2a73209de6f7b5ee67d97fc7e01b1773ad089836e3f4b8481341e638f54085078
 EBUILD s3ql-1.17.ebuild 1527 SHA256 d704bbdbe057f73a618fed20300b8dc454cf3f9dde61616b5a4f84ff88d29f29 SHA512 b4aa8199e412be69649312cf702ba0f36058dcc198f365ee64ddc5772be0a083c64395f6bda68d0abab537896bc616c13d1dc6ff36e306ae72ca971234d403c4 WHIRLPOOL 0e691a8e97451dc34fdb6813b5af15c98d1e95a74bf13077f2d03b67fec9b7c2abf346adcf1df8e95acad5bc5789d98cd293409915a60c7f63500845cf054a91
+EBUILD s3ql-1.18.1.ebuild 1548 SHA256 903e6647dc877873ece5e12ef306dc1281507a667370b6950fb637d89f1b1e93 SHA512 a469d5e507b7563a5b374ebbd9e342f79454d95434ab3537fd55f1281c03c085df1949533acfde2e9768a9024131011a9050bdadcab7469cfb2da53b44ba772f WHIRLPOOL 1c413db8e6e36e05f6931ccea0f141509cfaa1d010c07dc5c85e4243e242680ae1c6e593d12435bad52e19e3fc2df85986fa0e6ab366754e178acf95fafd4efd
 EBUILD s3ql-2.2.ebuild 1265 SHA256 f8389d7a2befc4be70fa666d818427767646b1151e19c5f78be4a9883fabbb07 SHA512 7e759ca43296bf01ffcdaa570e14ae5b146775867d38ef64b80328b41dd57e12c1f66a8c1fb3cd842b5a26e0862d93c31efeedd69cd20990b116db1068f12c56 WHIRLPOOL 648db2903e79e09b0595d392c6a802828abe8870c7668a574a746d240e8362919aa1314e19ae640715fd05bb12dfce18b047834b11fd6d23bfc7336518ccbdc3
 EBUILD s3ql-2.3.ebuild 1265 SHA256 d6782f1a132b7cfab685c19cd74cb0960ebc5251d551f0c21312450602fc47fd SHA512 65c5a04db1df522ee3deb59c050fcc6067e99564bdab01e893962a67414e93b5be7367dfbee29479a312a0c05183b3608e621fa233c8eaf236b245bbbd5985df WHIRLPOOL 5885cb97847a84456755902cac070e8e0d034256b733feb74b5428932e99f5fab956be292eadd540cea3b6382ae25b15089c3f4876c2c2c74b9378199fbefb3f
 EBUILD s3ql-2.4.ebuild 1265 SHA256 272bfb7841be2479404fd4ee9476b34a3b313a58c2ce091baa53437c068035a0 SHA512 c7ad279fbcb71651664c4484c9f7add0a7b14967dcc3a6615849910797b4d759ab4707873c38ed34a935509fa7600954ec109b39d75f648ba987e834148ae1aa WHIRLPOOL 1c7d8b905c7907ec3da5240f6d31a42a8f3986c00f5bdecf6e4142fb84ee87252c39800f613ff32614c03c15cb72251bbff292b76da081122d0204ae95a9f82a
@@ -23,16 +25,16 @@ EBUILD s3ql-2.6.ebuild 1263 SHA256 626c023b4325ce79690dd6a50022a99bb901d85ff701b
 EBUILD s3ql-2.7.ebuild 1261 SHA256 23da88d0c241bf624b0eed04eda4296286a423ebb2506ae5ec392582639936ab SHA512 acbc086aa2fb23795ad3c6de5183a4cb6b78a38214259504e2e756d9036240a816a20c6b66f3da0f96f7875698e98ab8632a1317fe725adc5c067becd8ffdcee WHIRLPOOL 10ed76a39ae7f653aeeef3344d8f23b9bd3c93ac263f1c8414075330d55bfb6627cdc8a1f91919b9d080665beb4878b885b626028f673e15680b2b9cf39dde63
 EBUILD s3ql-2.8.1.ebuild 1278 SHA256 db644827676db1ca2c7739227c20ffdda95bcd874948783e97c723e17fd44666 SHA512 7f77e651204ec758202c4b3e7d0a8bf4d517fdc5da6b39a498d9878f9d43b3d1ea6b8fd0c6c3d996b7fd31e38aee462d7ddd54fccaae5b8f612ecb989f0103b7 WHIRLPOOL 818777e2d9824cdfc739265a0a684d32e79fbf1c213c8eb61ba12e96d25e06fadcb06f527522d27a85e568a89912f91af953935467365a502f839fb0bf41af90
 EBUILD s3ql-2.8.ebuild 1382 SHA256 c3c785c9a56d2e27d55ff51ec500b995b91df935ce87c944ebdd62d699985fce SHA512 43844983dceae9341d8dac1bad21018b23ddc5fd7529498901c654fe829d95cc523d0c7dd01866910ea2d0bec3bbdb50e074153b3d7acf18e17f8a7dff1b7c60 WHIRLPOOL 12e3ed1f31246f0b4062b9db06b6658da6a7707c9b7c6e594aae685f6dfa4e5c363dd5f4fa6643cc5387cfec724e3bbe5074aeefb4000d451134137e50231fd9
-MISC ChangeLog 3814 SHA256 ca69a975737883616cfd31649fbf70e1dda8ca53d7dbd20493d410ed141a0ad0 SHA512 282115a66b15c4673c1d60a108bcf90d65ae345b7990cb8e5de81c89316ed63c0d61d2e142dfb9e277836c871a52d0e7df5cff58d780b3ebf0700d32c0011380 WHIRLPOOL 983cb4f1e3ac526689f0e8f92d23e5f1e765a2e8a4dfcb9146b7a89c0a16bd83b0b73a3ef93a02877c77033fb9f95ab95679bdd4a8b68907bf0818d32a1bc696
+MISC ChangeLog 3929 SHA256 c313080ee38f2c877341a4664f05af6075bc255e579ab5d43bd7625ce3607e58 SHA512 9d54389f8dff0790f84231398be010502a63accebd2b1150ce2ecd38e2c57f8752b9c0815b0107f6100f06da12f3fe0493eba0190b007073b3c1ddf4a38f49c2 WHIRLPOOL 0c5cb0f7f21681eb3877de1548678c7a701e1999d154f2cb0cf16f962200589fd6e8d419db1ed71ff61d36a3a86ad311116559c938a8cb88b3ae2074126abadf
 MISC metadata.xml 390 SHA256 56e2d7dc7a76440bfd9b1a82c741a0e7e54adcfde6b1ceec868bb029032a8b6c SHA512 9261f43d634685135097ac6631cb499508bfeed9670dbcffc76900c86fe2f3c086f0ed6bccc6153af7bf4ea17482b6d41a81cbefbebbbf42febd634f7232163c WHIRLPOOL 80c3e2e974861bd9086e0f48c0d21a3c9ae335ee1cd247e005a55f465a8fcc2aecfee934d16a437cd36432c3d39b1634b796ce2ddd683cf3f87b24fb8a7a06c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTOJV7AAoJEEqz6FtPBkyjDD0IAJ/Z/SdfAVLdoqCiiBqtAzZl
-qygL1F0KRUwITm7SK4jDt0lWzAC9S9Ii8QXEw5VDfR5sGmma3cNdbavfg4RouMXu
-GH8EB2gaaLtfTugnFPF6PQIZMpW2omUXyRkL1BnShT5BrpcSxgjtG0SFphNWJdPm
-3V2XHOBwx8+aNi58UHaGpVhGYfrE6TBLePvGTmZNxjanrBfSmHnbJCbAzuVCsiRS
-xhYn9akNW8R1wNKp5RFFNe5uUu+2SLchItmUv6zj8Q6eJUZvt0x0esiOYmGU7Rmo
-W/Ku2fHt0yZHDC/VPoGLFJGqvJPD+TkdNXm3E2+/MbRecBF+DF7Pyz0f48BPhDo=
-=Jb/n
+iQEcBAEBCAAGBQJTZKhuAAoJEEqz6FtPBkyjvY4H/0mCPeagnXAHio3EKeOGWTzj
+fKXYMMAgcz61MY3OioHRr6yt7u6HtrYCQM6fLn4DBn72/HkpKwqlMy+G/GR874zJ
+CIn4z7HrtS6OakhWwL5vYQWTKbNSdqzOBLO+Idq7EVqBi/ZNJ5WW85Er6ttryzFs
+4HV1Nmq7lBVwkmDohIe8S6fhZRi+qyzRWTpdqRqr/qCSC06PPRcjfsNyx6IVwg2h
+S+LWdxxXUh86dH4JWrKJkDFZDh59/BmL+UI1Erpqn8dDvUQYNWscZica6+B5UVTi
+IMgfB2MwjSUvRAfeTBMIphZsfJ+zEyR3iAVd+W6GFG5T2KeFUI6+uPF4R/6AH8A=
+=HcHM
 -----END PGP SIGNATURE-----
